deployments/gateway/base/gateway-class.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
  namespace: infra
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
